# kwin-plugin-clickdragrelease

./: .gitignore  CMakeLists.txt  Containerfile  Justfile  README.md  contextmenudragplugin.cpp  kwin-plugin-clickdragrelease.spec  kwin_contextmenudrag.json  kwin_contextmenudrag.json.in  metadata.json
.github/workflows/: build.yml  release.yml
tools/: plugin_tester.cpp
